--- a/data/static/faq/index.html
+++ b/data/static/faq/index.html
@@ -4,7 +4,9 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <link type="image/x-icon" rel="icon" href="/favicon.ico" />
-    <link rel="stylesheet" type="text/css" href="/css/style.css" />
+<style>
+#include static/css/style.css
+</style>
     <link rel="author" href="/humans.txt" />
     <meta name="description" content="Quick and easy sharing of markdown text" />
     <meta name="keywords" content="markdown, pastebin, markdownsharing, sharing markdown" />
@@ -55,7 +57,8 @@
 </div>
 
     </div>
-    <script src="/js/k.js" type="text/javascript"></script>
-
+<script type="text/javascript">
+#include static/js/k.js
+</script>
   </body>
 </html>
