--- a/data/static/index.html
+++ b/data/static/index.html
@@ -6,7 +6,9 @@
 <link type="image/x-icon" rel="icon" href="/favicon.ico" />
 <meta name="description" content="Quick and easy sharing of markdown text" />
 <meta name="keywords" content="markdown, pastebin, markdownsharing, sharing markdown" />
-<link rel="stylesheet" type="text/css" href="/css/style.css" />
+<style>
+#include static/css/style.css
+</style>
 <link rel="author" href="/humans.txt" />
 <title>MarkdownShare : Simple Markdown sharing</title>
 </head>
@@ -62,7 +64,9 @@
 </div>
 
 </div>
-<script src="/js/k.js" type="text/javascript"></script>
+<script type="text/javascript">
+#include static/js/k.js
+</script>
 
 </body>
 </html>
