Added links to source-code

--- a/data/static/faq/index.html
+++ b/data/static/faq/index.html
@@ -43,6 +43,10 @@
               <p>Although the URLs which are generated are "random" that is the only security present.  If a remote user finds a link to your text they can view it, or download it.</p>
               <p><b>NOTE</b>: There is no intention of ever password-protecting the uploaded contents.</p>
             </dd>
+            <dt>What software powers this service?</dt>
+            <dd>
+              <p>This site runs a simple golang-based application, which you can find hosted upon github <a href="https://github.com/skx/markdownshare/">https://github.com/skx/markdownshare/</a>.</p>
+            </dd>
           </dl>
         </blockquote>
       </div>
