Added read-only-warning-banner to all pages; and FAQ entry

--- a/data/static/faq/index.html
+++ b/data/static/faq/index.html
@@ -27,6 +27,7 @@
 <li><a href="/cheatsheet/">CheatSheet</a></li>
 <li><a href="/faq/">FAQ</a></li>
 </ul>
+<p style="border: 1px solid black; background: salmon !important; font-weight:bold;width:100%"><b>NOTE</b> This site will be going 100% read-only on 1st April 2020.  See <a href="/faq/">FAQ</a> for more details.</p>
 </div>
 
       <div id="content">
@@ -35,7 +36,7 @@
           <dl>
             <dt>What is this site for?</dt>
             <dd>
-              <p>This site is solely designed to allow you to easily share markdown text.</p>
+              <p>This site was designed to allow you to easily share markdown text.</p>
               <p><a href="/create/">Paste in your markdown</a>, then share the resulting link with your friends, colleagues, or other people.</p>
             </dd>
             <dt>How secret is my uploaded text?</dt>
@@ -46,6 +47,22 @@
             <dt>What software powers this service?</dt>
             <dd>
               <p>This site runs a simple golang-based application, which you can find hosted upon github <a href="https://github.com/skx/markdownshare/">https://github.com/skx/markdownshare/</a>.</p>
+            </dd>
+            <dt>This site is going read-only?</dt>
+            <dd>
+              <p>Sadly yes.  The site will go 100% read-only on 1st April 2020.  When the site is read-only:</p>
+              <ul>
+                <li>Creating new entries will fail.</li>
+                <li>Editing exiting entries will no longer be possible.</li>
+                <li>Deleting documents which have previously been uploaded will be impossible.</li>
+              </ul>
+              <p>The reason for this is that the site is suffering from non-stop spam submissions, and dealing with that requires more overhead than I can handle.</p>
+              <p>Free services are always a balance between the desire to provide something fun, useful, or interesting and dealing with the support-burden.  In this case after six years I've reached my limit.</p>
+            </dd>
+            <dt>What happens after going read-only?</dt>
+            <dd>
+              <p>The site contents will remain online until the end of 2020, then I'll securely erase all previously uploaded content.</p>
+              <p>At that point everything will be gone.</p>
             </dd>
           </dl>
         </blockquote>
