More updates for read-only mode
* Drop /api, /cheatsheet, etc.
* Updated FAQ
* Added commercial option.
  * As part of rewritten front-page.

--- a/data/static/index.html
+++ b/data/static/index.html
@@ -22,9 +22,6 @@
 <div id="topmenu">
 <ul>
 <li><a href="/">Home</a></li>
-<li><a href="/api/">API</a></li>
-<li><a href="/create/">Create</a></li>
-<li><a href="/cheatsheet/">CheatSheet</a></li>
 <li><a href="/faq/">FAQ</a></li>
 </ul>
 <p style="border: 1px solid black; background: salmon !important; font-weight:bold;width:100%"><b>NOTE</b> This site will be going 100% read-only on 1st April 2020.  See <a href="/faq/">FAQ</a> for more details.</p>
@@ -33,24 +30,15 @@
 <div id="content">
       <h1>Markdown Sharing</h1>
       <blockquote>
-        <p>This site allows you to easily share Markdown-formatted text, allowing others to view the nicely rendered result - In short this is a "markdown-using pastebin" site.</p>
-        <ul>
-          <li>There is no charge to use the site.</li>
-          <li>You don't need to create an account.
-            <ul>
-              <li>If you make a mistake and upload content you didn't mean to you can delete it.</li>
-              <li>Once you've uploaded your markdown you can return in the future and edit it.</li>
-              <li>Uploaded text automatically has an obfusticated URL to avoid spidering attempts.</li>
-            </ul>
-          </li>
-          <li>There are no unreasonable restrictions on uploaded content.
-            <ul>
-              <li>Although people who merely upload SPAM will find their access is removed.</li>
-            </ul>
-          </li>
-        </ul>
-        <p>Get started <a href="/create">sharing your markdown</a> is very easy, just visit the <a href="/create/">create link</a> and away you go.</p>
-        <p>If you prefer to submit without using a browser that is possible, via our simple <a href="/api/">submission API</a> which supports the use of HTTP-POSTS, or command-line clients such as <tt>pastebinit</tt>.</p>
+        <p>This site previously allowed you to easily share Markdown-formatted text, allowing others to view the nicely rendered result.  It was basically a pastebin-like site with Markdown support.</p>
+        <p>As of April 2020 the site has entered read-only mode, as a result of endless abuse.</p>
+        <p>With no charge to use the site, and significant administrative overhead keeping the site up and running for all is too much of a burden.</p>
+        <p>The site will remain online until 1st January 2021 then all previous data will be removed.</p>
+      </blockquote>
+      <h2>Your Own Instance</h2>
+      <blockquote>
+        <p>If you've come to rely upon this site you can run your own easily, via the code available <a href="https://github.com/skx/markdownshare/">here on github</a>, you only need a domain-name, and small virtual server.</p>
+        <p>I would be willing to setup a private instance, and maintain it for you, for a price of €500/year, payable in advance.  <a href="https://steve.kemp.fi/">Drop me a mail</a> if that is something you'd consider.</p>
       </blockquote>
 
 </div>
