--- a/data/static/faq/index.html
+++ b/data/static/faq/index.html
@@ -22,9 +22,6 @@
 <div id="topmenu">
 <ul>
 <li><a href="/">Home</a></li>
-<li><a href="/api/">API</a></li>
-<li><a href="/create/">Create</a></li>
-<li><a href="/cheatsheet/">CheatSheet</a></li>
 <li><a href="/faq/">FAQ</a></li>
 </ul>
 <p style="border: 1px solid black; background: salmon !important; font-weight:bold;width:100%"><b>NOTE</b> This site will be going 100% read-only on 1st April 2020.  See <a href="/faq/">FAQ</a> for more details.</p>
@@ -36,8 +33,7 @@
           <dl>
             <dt>What is this site for?</dt>
             <dd>
-              <p>This site was designed to allow you to easily share markdown text.</p>
-              <p><a href="/create/">Paste in your markdown</a>, then share the resulting link with your friends, colleagues, or other people.</p>
+              <p>This site was designed to allow easily sharing of markdown text.</p>
             </dd>
             <dt>How secret is my uploaded text?</dt>
             <dd>
